--- a/Calculator/calc.html
+++ b/Calculator/calc.html
@@ -11,45 +11,45 @@
 
 <body>
 
-    <img src="img/calculator.png" alt="calculator icon" onclick="showCalc()">
+    <img src="img/calculator.png" alt="calculator icon" class="calcBut" onclick="showCalculator()">
 
     <div id="calc">
         <div class="grid-container">
 
             <div class="grid-nagyobb-items">
-                <span>Calculator</span>
-                <span class="right x">X</span>
+                <span class="cim">Calculator</span>
+                <span class="right x calcBut" onclick="showCalculator()">X</span>
                 <span class="right U">U</span>
                 <span class="right _">_</span>
             </div>
 
-            <div class="grid-nagyob-item">PlaceHolder2</div>
-            <div class="grid-nagyobb-item">PlaceHolder1</div>
+            <div class="grid-nagyob-item" id="secondaryScreen"></div>
+            <div class="grid-nagyobb-item" id="mainScreen"></div>
 
-            <div class="grid-item-vilagos">C</div>
-            <div class="grid-item-vilagos">CE</div>
-            <div class="grid-item-vilagos">x<sup>2</sup></div>
-            <div class="grid-item-vilagos">/</div>
+            <div class="grid-item-vilagos" onclick="clearCalculator()">C</div>
+            <div class="grid-item-vilagos" onclick="ceClearCalculator()">CE</div>
+            <div class="grid-item-vilagos" onclick="square()">x<sup>2</sup></div>
+            <div class="grid-item-vilagos" onclick="getOperator('/')">/</div>
 
-            <div class="grid-item">7</div>
-            <div class="grid-item">8</div>
-            <div class="grid-item">9</div>
-            <div class="grid-item-vilagos">x</div>
+            <div class="grid-item" onclick="getNumber('7')">7</div>
+            <div class="grid-item" onclick="getNumber('8')">8</div>
+            <div class="grid-item" onclick="getNumber('9')">9</div>
+            <div class="grid-item-vilagos" onclick="getOperator('*')">x</div>
 
-            <div class="grid-item">4</div>
-            <div class="grid-item">5</div>
-            <div class="grid-item">6</div>
-            <div class="grid-item-vilagos">-</div>
+            <div class="grid-item" onclick="getNumber('4')">4</div>
+            <div class="grid-item" onclick="getNumber('5')">5</div>
+            <div class="grid-item" onclick="getNumber('6')">6</div>
+            <div class="grid-item-vilagos" onclick="getOperator('-')">-</div>
 
-            <div class="grid-item">1</div>
-            <div class="grid-item">2</div>
-            <div class="grid-item">3</div>
-            <div class="grid-item-vilagos">+</div>
+            <div class="grid-item" onclick="getNumber('1')">1</div>
+            <div class="grid-item" onclick="getNumber('2')">2</div>
+            <div class="grid-item" onclick="getNumber('3')">3</div>
+            <div class="grid-item-vilagos" onclick="getOperator('+')">+</div>
 
             <div class="grid-item">+-</div>
-            <div class="grid-item">0</div>
+            <div class="grid-item" onclick="getNumber('0')">0</div>
             <div class="grid-item">.</div>
-            <div class="grid-item-kek">=</div>
+            <div class="grid-item-kek" onclick="calculate()">=</div>
 
         </div>
     </div>
