--- a/Calculator/calc.html
+++ b/Calculator/calc.html
@@ -28,26 +28,26 @@
 
             <div class="grid-item-vilagos" onclick="clearCalculator()">C</div>
             <div class="grid-item-vilagos" onclick="ceClearCalculator()">CE</div>
-            <div class="grid-item-vilagos" onclick="square()">x<sup>2</sup></div>
+            <div class="grid-item-vilagos" onclick="">x<sup>2</sup></div>
             <div class="grid-item-vilagos" onclick="getOperator('/')">/</div>
 
-            <div class="grid-item" onclick="getNumber('7')">7</div>
-            <div class="grid-item" onclick="getNumber('8')">8</div>
-            <div class="grid-item" onclick="getNumber('9')">9</div>
+            <div class="grid-item" onclick="getNumber(7)">7</div>
+            <div class="grid-item" onclick="getNumber(8)">8</div>
+            <div class="grid-item" onclick="getNumber(9)">9</div>
             <div class="grid-item-vilagos" onclick="getOperator('*')">x</div>
 
-            <div class="grid-item" onclick="getNumber('4')">4</div>
-            <div class="grid-item" onclick="getNumber('5')">5</div>
-            <div class="grid-item" onclick="getNumber('6')">6</div>
+            <div class="grid-item" onclick="getNumber(4)">4</div>
+            <div class="grid-item" onclick="getNumber(5)">5</div>
+            <div class="grid-item" onclick="getNumber(6)">6</div>
             <div class="grid-item-vilagos" onclick="getOperator('-')">-</div>
 
-            <div class="grid-item" onclick="getNumber('1')">1</div>
-            <div class="grid-item" onclick="getNumber('2')">2</div>
-            <div class="grid-item" onclick="getNumber('3')">3</div>
+            <div class="grid-item" onclick="getNumber(1)">1</div>
+            <div class="grid-item" onclick="getNumber(2)">2</div>
+            <div class="grid-item" onclick="getNumber(3)">3</div>
             <div class="grid-item-vilagos" onclick="getOperator('+')">+</div>
 
             <div class="grid-item">+-</div>
-            <div class="grid-item" onclick="getNumber('0')">0</div>
+            <div class="grid-item" onclick="getNumber(0)">0</div>
             <div class="grid-item">.</div>
             <div class="grid-item-kek" onclick="calculate()">=</div>
 
