--- a/Calculator/calc.html
+++ b/Calculator/calc.html
@@ -28,7 +28,7 @@
 
             <div class="grid-item-vilagos" onclick="clearCalculator()">C</div>
             <div class="grid-item-vilagos" onclick="ceClearCalculator()">CE</div>
-            <div class="grid-item-vilagos" onclick="">x<sup>2</sup></div>
+            <div class="grid-item-vilagos" onclick="square()">x<sup>2</sup></div>
             <div class="grid-item-vilagos" onclick="getOperator('/')">/</div>
 
             <div class="grid-item" onclick="getNumber(7)">7</div>
